# chainx-subxt

./: Cargo.toml  LICENSE  README.md
scripts/: test.fish
src/: lib.rs
src/client/: Cargo.toml
src/runtime/: mod.rs
src/runtime/pallet/: mod.rs  xgateway_bitcoin_v2.rs  xgateway_records.rs
